# catethos.github.io

./: 404.html  _quarto.yml  index.html  index.xml  pyproject.toml  sitemap.xml
.virtual_documents/posts/: 20220912_testing.ipynb  20221115_AB_testing.ipynb
_site/: index.html  listings.json  search.json
_site/posts/: 20220912_testing.html  20221115_AB_testing.html  Another Two.html  Blog 1.html  Regina I love you.html  another.html  another1.html  blog2.html  new.html
about/: index.html  index.xml
about/page/1/: index.html
categories/: index.html  index.xml
docs/: about.html  search.json
docs/site_libs/bootstrap/: bootstrap.min.css
posts/: 20220912_testing.ipynb  20221115_AB_testing.ipynb  index.html  index.xml
posts/eckman/: index.html
posts/page/1/: index.html
tags/: index.html  index.xml
